# my_eggs

./: FSR.ino  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
Dimash/: BarFSR.py  Client_DualSenseControl.py  Data_Recorder.py  Server_DualSenseControl.py  Test.py  editThisLabel.csv  execute.sh  new.csv
Dimash/Data/1/: 10_ON.csv  1_ON.csv  2_ON.csv  3_ON.csv  4_ON.csv  5_ON.csv  6_ON.csv  7_ON.csv  8_ON.csv  9_ON.csv
Dimash/Data/10/: 10_ON.csv  1_ON.csv  2_OFF.csv  3_OFF.csv  4_OFF.csv  5_OFF.csv  6_ON.csv  8_ON.csv  9_ON.csv
Dimash/Data/11/: 10_OFF.csv  1_ON.csv  2_ON.csv  3_OFF.csv  4_OFF.csv  5_ON.csv  6_ON.csv  7_OFF.csv  8_OFF.csv  9_ON.csv
Dimash/Data/12/: 10_ON.csv  1_OFF.csv  2_ON.csv  3_OFF.csv  4_ON.csv  5_OFF.csv  6_OFF.csv  7_OFF.csv  8_ON.csv  9_ON.csv
Dimash/Data/13/: 10_OFF.csv  1_OFF.csv  (+8 more)
Dimash/Test_Potentiometer/: Test_Potentiometer.ino
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/lib/: libchomp_motion_planner.so.1.0.8  libchomp_planner_plugin.so.1.0.8  libcollision_detector_fcl_plugin.so.1.0.8  libgeometric_shapes.so.0.7.3  libmoveit_background_processing.so.1.0.8  libmoveit_cached_ik_kinematics_base.so.1.0.8  libmoveit_cached_ik_kinematics_plugin.so.1.0.8  libmoveit_chomp_optimizer_adapter.so.1.0.8  libmoveit_collision_detection.so.1.0.8  libmoveit_collision_detection_fcl.so.1.0.8  libmoveit_collision_distance_field.so.1.0.8  libmoveit_collision_plugin_loader.so.1.0.8  libmoveit_common_planning_interface_objects.so.1.0.8  libmoveit_constraint_sampler_manager_loader.so.1.0.8  libmoveit_constraint_samplers.so.1.0.8  libmoveit_controller_manager_example.so.1.0.8  libmoveit_cpp.so.1.0.8  libmoveit_default_planning_request_adapter_plugins.so.1.0.8  libmoveit_depth_image_octomap_updater.so.1.0.8  libmoveit_depth_image_octomap_updater_core.so.1.0.8  libmoveit_depth_self_filter.so.1.0.8  libmoveit_distance_field.so.1.0.8  libmoveit_dynamics_solver.so.1.0.8  libmoveit_exceptions.so.1.0.8  libmoveit_fake_controller_manager.so.1.0.8  libmoveit_kdl_kinematics_plugin.so.1.0.8  libmoveit_kinematic_constraints.so.1.0.8  libmoveit_kinematics_base.so.1.0.8  libmoveit_kinematics_metrics.so.1.0.8  libmoveit_kinematics_plugin_loader.so.1.0.8  libmoveit_lazy_free_space_updater.so.1.0.8  libmoveit_lma_kinematics_plugin.so.1.0.8  libmoveit_mesh_filter.so.1.0.8  libmoveit_motion_planning_rviz_plugin.so.1.0.8  libmoveit_motion_planning_rviz_plugin_core.so.1.0.8  libmoveit_move_group_capabilities_base.so.1.0.8  libmoveit_move_group_default_capabilities.so.1.0.8  libmoveit_move_group_interface.so.1.0.8  libmoveit_move_group_pick_place_capability.so.1.0.8  libmoveit_ompl_interface.so.1.0.8  (+46 more)
logs/calibrate_rgb_sensor_rustam/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.007.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.054.log.stderr  build.make.055.log.stderr  build.make.056.log.stderr  build.make.061.log.stderr
logs/moveit_core/: build.make.000.log.stderr
logs/schunk_ezn64/: build.make.055.log.stderr
logs/ur_kinematics/: build.make.000.log.stderr
logs/ur_modern_driver/: build.cmake.000.log.stderr
src/: Client_DualSenseControl.py  Server_DualSenseControl.py  ur5_nsh_experiment.cpp  ur5_nsh_experiment.h
src/calibrate_rgb_sensor_rustam/: .kdev_include_paths  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
src/calibrate_rgb_sensor_rustam/include/: ur5_nsh_experiment.h
src/calibrate_rgb_sensor_rustam/script/: csv_parsing.py~  move_robot_back.py~  move_robot_back_rustam.py  move_robot_back_rustam_light.py  negative_exp_init.py  negative_exp_init.py~  sine_force.py  sine_force.py~  test_move_before_experiment_normal_shear_torsion.py  test_move_before_experiment_normal_shear_torsion.py~  train_labels.csv~  weiss_sensor_before_calib.py~  weiss_sensor_before_servo.py~  weiss_sensor_init_before_calib.py  weiss_sensor_init_before_calib.py~
src/calibrate_rgb_sensor_rustam/src/: README.md  broadcast_desired_pose_rgb_normal_shear_torsion_rustam.cpp  ur5_nsh_experiment.cpp
src/move_ur_sim/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/move_ur_sim/config/rviz/: rviz_ur10.rviz
src/move_ur_sim/scripts/: CTUAR.py  ConnectToUR3.py  test_move.py
src/move_ur_sim/src/: broadcast_desired_pose_move.cpp  broadcast_desired_poses_planner.cpp  crosstalk_find.cpp  desired_velocities.cpp  init_experiment.cpp  init_pose_before_any_servo.cpp
src/moveit/: .gitignore
src/touch_contr_ur/src/practise_moveit/: CMakeLists.txt  package.xml
src/touch_contr_ur/src/practise_moveit/src/: learn_kinematics.cpp
src/touch_contr_ur/src/real_tactile_image/: CMakeLists.txt  setup.py  setup.py~
src/touch_contr_ur/src/real_tactile_image/launch/: communicaion_weiss.launch  write_sensor_params_gazebo_image.launch  write_sensor_params_real_image.launch  write_sensor_params_real_image.launch~
src/touch_contr_ur/src/real_tactile_image/scripts/: fakeinput.txt  image_publisher.py  not_integrated.py  weiss_communicate.py  weiss_communicate_12bit.py  weiss_communicate_8and12bit.py  weiss_communicate_8and12bit_inverted.py
src/touch_contr_ur/src/real_tactile_image/src/: weiss_communicattion_cpp.cpp
src/ur_modern_driver/: src.kdev4  test_move.py
(+3229 files in other folders)
